Testing shorter audio file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             device-orientation-permission-ui="enabled: false"
         >
             <a-assets>
-                <audio id="sound" src="./music.mp3" preload="auto"></audio>
+                <audio id="sound" src="./music2.mp3" preload="auto"></audio>
             </a-assets>
             <a-camera
                 position="0 0 0"
