Changed audio to the womin-dji-ka

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
                     id="buttonImg"
                     src="https://cdn-icons-png.flaticon.com/512/17/17550.png"
                 />
-                <audio id="sound" src="./music2.mp3" preload="auto"></audio>
+                <audio
+                    id="sound"
+                    src="./womin-dji-ka.mp3"
+                    preload="auto"
+                ></audio>
             </a-assets>
             <a-camera
                 position="0 0 0"
